--- a/style.scss
+++ b/style.scss
@@ -72,18 +72,28 @@
       .progress-list {
         flex: 1;
         height: 3px;
-        background: #666;
+        background: rgba(#fff, .2);
         position: relative;
         cursor: pointer;
         transition: transform .1s cubic-bezier(0.0, 0.0, 0.2, 1);
 
         &:hover {
-          background: #999;
           transform: scaleY(1.5);
+
+          .mask-line {
+            left: auto;
+          }
         }
       }
 
-      .play {
+      .buffer-line {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        background: green;
+      }
+
+      .play-line {
         position: absolute;
         left: 0;
         top: 0;
@@ -92,23 +102,13 @@
         background: #D71816;
       }
 
-      .buffer {
+      .mask-line {
         position: absolute;
         left: 0;
+        right: 0;
         top: 0;
         bottom: 0;
-        width: 0;
-        z-index: 4;
-      }
-
-      .hover {
-        background: rgba(0, 0, 0, .5);
-        opacity: 0;
-        position: absolute;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        width: 0;
+        background: rgba(0, 0, 0, .2);
       }
     }
 
