--- a/src/style.scss
+++ b/src/style.scss
@@ -23,12 +23,14 @@ $control-bar-height: 28px;
       cursor: pointer;
 
       &:hover {
-        .play-icon, .pause-icon {
+        .ic-play, .ic-pause {
           fill: #fff;
         }
       }
 
-      .play-icon, .pause-icon {
+      .ic-play, .ic-pause {
+        width: 50px;
+        height: $control-bar-height;
         fill: darken(#fff, 20%);
       }
     }
